# cppm-homeworks-11-05-

./: CMakeLists.txt  cppm-homeworks-11-05.cpp
resources/: CMakeLists.txt  Figure.cpp  Figure.h  Parallelogramm.cpp  Parallelogramm.h  Quadrangle.cpp  Quadrangle.h  Quadrangle_all_corners_90.cpp  Quadrangle_all_corners_90.h  Romb.cpp  Romb.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Triangle_C_90.cpp  Triangle_C_90.h  Triangle_bedra_ravny.cpp  Triangle_bedra_ravny.h  Triangle_equal_sides.cpp  Triangle_equal_sides.h
